Install angular mat properly to fix issues with icons not showing

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -72,3 +72,6 @@ select {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
